# Polyphemus

./: .gitignore  .nojekyll  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  README.md  _quarto.yml  about.html  about.qmd  check_r_version.qmd  environment.yml  index.html  index.qmd  install.sh  listings.json  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  search.json  setup.py  sitemap.xml  test.html  test.ipynb
.github/workflows/: publish.yml
about/: index.html
background/: index.html
blog/: index.html
data/tuples/: cdm54.csv
docs/: 404.md  _quarto.yml  about.html  api-reference.md  conf.py  index.html  index.md  index.qmd  mkdocs.yml  references.bib  search.json  sitemap.xml
docs/_site/: sitemap.xml
docs/about/: background.md  index.qmd  privacy.md
docs/background/: index.qmd
docs/blog/: index.qmd
docs/docs/: index.md
docs/faq/: definitions_and_abbreviations.qmd  index.qmd
docs/getting-started/: quick-install.md
docs/models/: index.qmd
docs/references/: acknowledgements.qmd  defs.qmd
faq/: defs.html  index.html
models/: index.html
poetry/poetry-demo/: pyproject.toml
polyphemus/: .gitignore  example_01.ipynb  requirements.txt  setup.py  version.py
polyphemus/polyphemus/: database.py  main.py  models.py  out.txt  test.ipynb
polyphemus/tests/: test_get.py  test_post.py  (+1 more)
references/: acknowledgements.html  defs.html  index.html
setup/: conversation_starters.txt  instructions  instructions.txt  policy_evidence.txt  policy_general.txt  rfc2119.txt
templates/: README.md
(+10 files in other folders)
